--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>org.example</groupId>
     <artifactId>proyecto-mapa</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <dependencies>
         <dependency>
             <groupId>io.opencensus</groupId>
@@ -48,6 +49,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
