--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>firebase-admin</artifactId>
             <version>7.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
