Pruebo lo de la version de java

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,7 @@ spring:
       credentials:
         location: src/main/resources/gordos-proyecto-mapa-firebase-adminsdk-spt4v-0bbb41e8c2.json
       projectId: gordos-proyecto-mapa
+
+java:
+  runtime:
+    version: 11
